# RnaToProteinDataModule

./: .gitignore  5x2_run.py  LICENSE  NasModel.py  README.md  RnaToProteinModule.py  _5x2_models.py  __init__.py  nas_model_running_script.py  nas_run.py  pyproject.toml
BlockModules/: FullyConnectedBlock.py  Resnet3Block.py  Resnet4Block.py  __init__.py
Dataset_classes/: AdDataset.py  CptacDataset.py  DataSplitters.py  Dataset.py  DatasetProcessors.py  __init__.py
scripts/5x2/: 5x2_run.py
scripts/NAS/: nas_model_running_script.py  nas_run.py
scripts/SHAP/: 00_get_top_predicted_proteins.py  0SHAP_run.py  0_SHAP_run.py  1SHAP_output_consolidation_into_pandas.py  1_SHAP_output_consolidation_into_pandas.py  2SHAP_horseshoe_plot_generation.py  2SHAP_mse_calculations_on_output_consolidations.py  2_SHAP_absolute_mean_SHAP_vs_correlation_dataframe_creation.py  3_SHAP_transcript_type_categorization.py  4_SHAP_horseshoe_plot_generation.py  SHAP_output_consolidation_into_pandas.py  SHAP_run.py
scripts/SHAP/3_transcript_type_categorization/: categories.tsv
scripts/post-SHAP-analysis/: breaking_down_category1.py  kde.html
scripts/post-SHAP-analysis/data/: classified_categories.csv
scripts/post-SHAP-analysis/intra-cloud/: classify_categories_of_genes.py  kde.html  kde_data_prep.py
src/RnaToProteinDataModule/: NasModel.py  NasModel_Residuals.py  RnaToProteinModule.py  __init__.py
src/RnaToProteinDataModule/BlockModules/: FullyConnectedBlock.py  InputResidual.py  Resnet3Block.py  Resnet4Block.py  __init__.py  smallLayers.py
(+6 files in other folders)
